WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42990
REGRESSION (
r63854
): Safari RSS layout is broken due to changes in vendor prefix handling
https://bugs.webkit.org/show_bug.cgi?id=42990
Summary
REGRESSION (r63854): Safari RSS layout is broken due to changes in vendor pre...
Steven Kolins
Reported
2010-07-26 12:09:44 PDT
sometimes rss feeds don't show anything but the first entry and sometimes the trail to the right but cut off, and sometimes there is a navigation step sideways provided. The traditional vertical list is by far the best but doesn't work at all. See <feed:
https://service.govdelivery.com/service/rss/updates.rss?code=USLOC
> (entries go sideways to the right but get chopped off) <feed://www.physorg.com/rss-feed/space-news/> where no entries except the first are visible at all <feed://www.sciencecentric.com/feeds/> where sideways steps are provided but of far less utility than the original vertical default. The end result is that reading rss feeds is almost useless.
Attachments
Patch
(4.84 KB, patch)
2010-07-26 13:46 PDT
,
Mark Rowe (bdash)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2010-07-26 12:43:52 PDT
This broke with <
http://trac.webkit.org/changeset/63854
>.
Mark Rowe (bdash)
Comment 2
2010-07-26 12:45:02 PDT
Sadly
r63854
doesn’t mention which bug it is related to.
Mark Rowe (bdash)
Comment 3
2010-07-26 12:45:59 PDT
Found it. It seems to be related to
bug 42093
.
Mark Rowe (bdash)
Comment 4
2010-07-26 12:50:07 PDT
<
rdar://problem/8235718
>
Eric Seidel (no email)
Comment 5
2010-07-26 12:53:14 PDT
cd "/System/Library/Frameworks/PubSub.framework/Versions/A/Resources/PubSubAgent.app/Contents/Resources/" grep -e "-apple-" -r . Main.css: -apple-text-size-adjust: none; Main.css: -apple-line-clamp: 100%; Main.css: -apple-text-size-adjust: none; grep -e "-khtml-" -r . Main.css: -khtml-user-select: none; Main.css: display: -khtml-box; Main.css: -khtml-box-orient: vertical; Main.css: display: -khtml-box; Main.css: -khtml-box-orient: horizontal; Main.css: -khtml-box-align: baseline; Main.css: -khtml-user-select: none; Main.css: -khtml-margin-top-collapse:discard; Main.css: -khtml-margin-top-collapse:discard; Main.css: -khtml-user-select: none; Main.css:.apple-rss-multi-line-mode .apple-rss-subject { -khtml-box-flex: 60; } Main.css:.apple-rss-multi-line-mode .apple-rss-author { -khtml-box-flex: 40; } Main.css:.apple-rss-single-line-mode .apple-rss-subject { -khtml-box-flex: 1; -khtml-box-flex-group: 1; } Main.css:.apple-rss-single-line-mode .apple-rss-source { -khtml-box-flex: 1; -khtml-box-flex-group: 2; font-size: 12px; } Main.css:.apple-rss-single-line-mode .apple-rss-summary { -khtml-box-flex: 1; -khtml-box-flex-group: 4; } Main.css:.apple-rss-single-line-mode .apple-rss-date { -khtml-box-flex: 1; -khtml-box-flex-group: 100; font-size: 12px; text-align: right; margin-right: 0; } Are the culprits
Mark Rowe (bdash)
Comment 6
2010-07-26 13:03:29 PDT
I find it incredibly unlikely that Safari RSS is the only thing that uses -khtml or -apple vendor prefixes. Dashboard widgets, Dashcode templates, and third-party applications (Yahoo! Messenger) all appear to make use of these prefixes in some form.
Mark Rowe (bdash)
Comment 7
2010-07-26 13:09:46 PDT
I would like to propose rolling out
r63854
and having that issue revisited in a manner that takes backwards-compatibility in to consideration.
Mark Rowe (bdash)
Comment 8
2010-07-26 13:46:31 PDT
Created
attachment 62599
[details]
Patch This reverts only the WebCore portion of
r63854
. I see no reason to revert the layout test portion of that revision.
WebKit Review Bot
Comment 9
2010-07-26 13:47:57 PDT
Attachment 62599
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/css/CSSParser.cpp:5622: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Rowe (bdash)
Comment 10
2010-07-26 13:53:15 PDT
Landed in
r64071
.
WebKit Review Bot
Comment 11
2010-07-26 14:11:25 PDT
http://trac.webkit.org/changeset/64071
might have broken GTK Linux 32-bit Release
Mark Rowe (bdash)
Comment 12
2010-07-26 15:54:03 PDT
***
Bug 42896
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 13
2010-07-26 15:54:38 PDT
***
Bug 42898
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug